--- a/packages/client/src/styles/circle.css
+++ b/packages/client/src/styles/circle.css
@@ -7,19 +7,17 @@
 }
 
 .main-circle-border {
-    border: 1px dashed var(--primary-color);
-    z-index: -100;
+    border: 1px solid var(--primary-color);
 }
 
 .nav-circle-button {
     position: absolute;
-    border: 1px solid var(--primary-color);
-    border-radius: inherit;
+    border: 5px solid transparent;
     background-color: var(--bg-color);
     width: 150px;
     height: 150px;
     cursor: pointer;
-    transition: all 0.12s ease-in-out;
+    transition: all 0.2s cubic-bezier(0.39, 0.575, 0.565, 1);
 
     &:hover {
         background-color: var(--hover-color);
@@ -27,11 +25,9 @@
 
         .text-nav {
             position: absolute;
-            bottom: -36px;
-            background-color: var(--primary-color);
+            background-color: rgba(0, 0, 0, 0.4);
+            color: #fff;
             padding: 12px;
-            border-bottom-left-radius: 16px;
-            border-bottom-right-radius: 16px;
         }
     }
 }
@@ -96,4 +92,15 @@
     height: 10px;
     background-color: red;
     border-radius: 50%;
+}
+
+.match-history {
+    border: 1px solid var(--primary-color);
+    box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.2);
+    transition: all 0.2s cubic-bezier(0.39, 0.575, 0.565, 1);
+    cursor: pointer;
+
+    &:hover {
+        box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.25);
+    }
 }
