--- a/packages/client/src/styles/style.css
+++ b/packages/client/src/styles/style.css
@@ -13,16 +13,24 @@
     --btn-border: rgb(255, 255, 255);
 }
 
+.bg-primary {
+    background-color: var(--primary-color);
+}
+
 .color-primary {
-    color: var(--primary-color);
+    color: var(--primary-color) !important;
 }
 
 .color-danger {
-    color: var(--danger-color);
+    color: var(--danger-color) !important;
 }
 
 .color-success {
-    color: var(--success-color);
+    color: var(--success-color) !important;
+}
+
+.color-warning {
+    color: var(--warning-color) !important;
 }
 
 .color-white {
@@ -73,6 +81,58 @@
     font-style: normal;
 }
 
+.text-400 {
+    color: #fff;
+    font-family: 'Raleway', sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+}
+
+.text-500 {
+    color: #fff;
+    font-family: 'Raleway', sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 500;
+    font-style: normal;
+}
+
+.text-600 {
+    color: #fff;
+    font-family: 'Raleway', sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 600;
+    font-style: normal;
+}
+
+.text-700 {
+    color: #fff;
+    font-family: 'Raleway', sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 700;
+    font-style: normal;
+}
+
+.weight-100 {
+    font-weight: 100;
+}
+
+.weight-200 {
+    font-weight: 200;
+}
+
+.weight-300 {
+    font-weight: 300;
+}
+
+.weight-400 {
+    font-weight: 400;
+}
+
+.weight-500 {
+    font-weight: 500;
+}
+
 .size-xl {
     font-size: 2rem;
 }
@@ -87,6 +147,10 @@
 
 .size-sm {
     font-size: 0.8rem;
+}
+
+.size-xs {
+    font-size: 0.5rem;
 }
 
 .loader {
@@ -119,5 +183,19 @@
 
     &:hover {
         transform: scale(1.05);
+    }
+}
+
+.close-btn {
+    border: 1px solid white;
+    padding: 16px;
+    background-color: transparent;
+    border-radius: 6px;
+    cursor: pointer;
+    transition: all 0.2s linear;
+
+    &:hover {
+        border-color: var(--primary-color);
+        color: var(--primary-color);
     }
 }
